--- a/public/stylesheets/real_kanye.css
+++ b/public/stylesheets/real_kanye.css
@@ -1,3 +1,50 @@
+
+#controversy {
+    margin-top:10px;
+}
+
+#cbody-2 {
+    padding-bottom: 0px;
+}
+
+.header-ans {
+    font-size: 25px;
+    font-weight: 900;
+}
+
+#short-ans {
+    margin-bottom: 15px;
+}
+
+#long-ans {
+    margin-top: 25px;
+}
+
+.ans {
+    margin-top: 20px;
+}
+
+.ans p{
+    margin-bottom: 5px;
+}
+
+.faq-header {
+    margin: 20px;
+    margin-top: 30px;
+    font-size: 25px;
+    font-weight: 900;
+    /*text-shadow: 2px 2px #ff0000;
+    /*text-align: center;*/}
+
+#faq-btn {
+    margin-bottom: 15px;
+}
+
+.accordion {
+    width: 90%;
+    margin: 0 auto;
+}
+
 .article {
     margin-bottom: 10px;
 }
@@ -168,4 +215,155 @@ hr.style-eight {
         margin-top:15px;
         padding-bottom: 5px;
     }
+}
+/*Contact*/
+
+#alert-contact {
+
+}
+
+
+.body-contact {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+
+.body-contact {
+  font-weight: 100;
+  line-height: 30px;
+  color: #777;
+  background: #1e2226;
+}
+
+.container-contact {
+  max-width: 400px;
+  width: 100%;
+  margin: 100px auto;
+  position: relative;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+}
+
+#contact {
+  border-radius: 10px;
+  background: #F9F9F9;
+  padding: 25px;
+  /*margin: 100px 0;*/
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#contact h4 {
+  margin: 5px 0 20px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
+}
+
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #4CAF50;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+#contact button[type="submit"]:hover {
+  background: #43A047;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.copyright {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+
+::-webkit-input-placeholder {
+  color: #888;
+}
+
+:-moz-placeholder {
+  color: #888;
+}
+
+::-moz-placeholder {
+  color: #888;
+}
+
+:-ms-input-placeholder {
+  color: #888;
 }
