--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,9 +9,13 @@
     </head>
 
 
-    <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><i class="fas fa-newspaper"></i><span id="brand">Kanye West Sentiment News</span></a>
+    <% if(page_name === 'contact') {%>
+      <body class="body-contact">
+    <% } else {%>
+      <body>
+    <%  }%>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/"><i class="fas fa-newspaper"></i><span id="brand">Kanye West Sentiment News</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,12 +23,36 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-4">
+     <% if(page_name === 'landing') { %>
+          <li class="nav-item active" >
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+          </li>
+      <% } else { %>
+          <li class="nav-item" >
+            <a class="nav-link" href="/">Home</a>
+          </li>
+        <% } %>
+
+
+        <% if(page_name === 'faq') { %>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/faq">FAQ<span class="sr-only">(current)</span></a>
           </li>
+      <% } else { %>
           <li class="nav-item">
-            <a class="nav-link" href="faq">FAQ</a>
+            <a class="nav-link" href="/faq">FAQ</a>
           </li>
+        <% } %>
+
+        <% if(page_name === 'contact') { %>
+          <li class="nav-item active">
+            <a class="nav-link" href="/contact">Contact<span class="sr-only">(current)</span></a>
+          </li>
+      <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+        <% } %>
          <!--  <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
@@ -36,10 +64,5 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li> -->
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-
       </div>
 </nav>
