--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -34,7 +34,7 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo">
       <div class="card-body" id="cbody-2">
         Why not? Despite his infamous reputation as egotistical and arrogant, Ye has made some of the greatest music of our time and is, by many, considered a musical genius. Let us not forget albums such as MBDTF, Graduation, and KDS. A visionary that constantly pushes the boundaries of music and dares to explore new sounds, it would be surprising if I didn't make this.
-        <p id="controversy">Also the level of controversial surrounding Ye makes for somewhat worthwhile sentiment analysis.<p>
+        <p id="controversy">Also the level of controversy surrounding Ye makes for somewhat worthwhile sentiment analysis.<p>
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree">
       <div class="card-body">
-        Yes. All you would have to do is alter a configuration file containing the search term, number of results each week, number of weeks, and the URI to a database. After this, you would simply run the included 'news' script and the rest of the heavy lifting will be done for you. Isn't modular code so nice?
+        Yes. All you would have to do is alter a configuration file containing the search term, number of results each week, number of weeks, and the URI to a database. After that, you would simply run the included 'news' script and the rest of the heavy lifting will be done for you. Isn't modular code nice?
 
       </div>
     </div>
